--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <h1>Visualización – AG3 </h1>
 Nombre: Gonzalo Ordenes Reyes <br>
-Url: <a href="https://js-swrstv.stackblitz.io"> https://js-swrstv.stackblitz.io </a>
+Url: <a href="https://js-swrstv.stackblitz.io"> https://js-swrstv.stackblitz.io </a> </br>
+Url(github): <a href="https://github.com/raschalo/AG1"> https://github.com/raschalo/AG1</a> </br>
+
+Url(python): <a href="https://github.com/raschalo/AG1/blob/master/Asing_7_Visualizacion_de_Datos___Actividad_3_Gonzalo_Ordenes_Reyes.ipynb"> https://github.com/raschalo/AG1/blob/master/Asing_7_Visualizacion_de_Datos___Actividad_3_Gonzalo_Ordenes_Reyes.ipynb</a> </br>
 
 <h2>CO2 - google sheet</h2>
 
